style: change spacing from margin to padding to fix component pushing all elements down

--- a/src/components/Board/EmptyBoard/EmptyBoard.module.scss
+++ b/src/components/Board/EmptyBoard/EmptyBoard.module.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/variables.module";
 
 .empty-board-wrapper {
-  margin: 21.1rem 1.6rem 0 1.6rem;
+  padding: 21.1rem 1.6rem 0 1.6rem;
 
   h2 {
     @include mixins.large-heading;
@@ -39,7 +39,7 @@
 
 @media (min-width: 768px) {
   .empty-board-wrapper {
-    margin: 32.8rem 15.4rem 0 15.5rem;
+    padding: 32.8rem 15.4rem 0 15.5rem;
     position: relative;
     transition: left 0.5s ease-in-out;
     left: 0;
@@ -56,7 +56,7 @@
 
 @media (min-width: 1440px) {
   .empty-board-wrapper {
-    margin: 36.4rem 47.3rem 0 47.4rem;
+    padding: 36.4rem 47.3rem 0 47.4rem;
 
     h2 {
       margin-bottom: 3.2rem;
